--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-google-cloud-aiplatform
-google-cloud-logging
 google-ai-generativelanguage==0.6.2
 google-api-core==2.19.0
 google-api-python-client==2.127.0
+google-auth==2.29.0
+google-auth-httplib2==0.2.0
 google-generativeai==0.5.2
 googleapis-common-protos==1.63.0
 streamlit>=1.0
