--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+google-cloud-aiplatform
+google-cloud-logging
 google-ai-generativelanguage==0.6.2
 google-api-core==2.19.0
 google-api-python-client==2.127.0
